# EbbFlowControl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  build_all.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults_old  sdkconfig.factory  sdkconfig.private
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  changelog.yml  clang-format-label.yml  pre-commit-autoupdate.yml  pre-commit.yml  release.yml
components/config_page/: CMakeLists.txt  config_page.c  idf_component.yml
components/config_page/html/: config_page.html
components/config_page/include/: config_page.h
components/configuration/: CMakeLists.txt  Kconfig  configuration.c  idf_component.yml
components/configuration/include/: configuration.h
components/data_logging/: CMakeLists.txt  data_logging.c  idf_component.yml
components/driver_gp8211s/: CMakeLists.txt  Kconfig  driver_gp8211s.c
components/driver_gp8211s/include/: driver_gp8211s.h
components/driver_hc_sr04/: CMakeLists.txt  Kconfig  driver_hc_sr04.c
components/driver_hc_sr04/include/: driver_hc_sr04.h
components/level_sensor/: CMakeLists.txt  Kconfig  idf_component.yml  level_sensor.c
components/level_sensor/include/: level_sensor.h
components/light_control/: Kconfig  idf_component.yml  light_control.c
components/light_control/include/: light_control.h
components/mqtt5_connection/: CMakeLists.txt  Kconfig  config_connection.c  data_logging.c  generic_data_store.c  idf_component.yml  level_data_store.c  light_data_store.c  memory_data_store.c  mqtt5_connection.c  pump_data_store.c
components/mqtt5_connection/include/: config_connection.h  data_logging.h  generic_data_store.h  level_data_store.h  light_data_store.h  memory_data_store.h  mqtt5_configuration.h  mqtt5_connection.h  mqtt_shared.h  pump_data_store.h
components/ota_updater/: CMakeLists.txt  Kconfig  ota_scheduler.c  ota_updater.c
components/ota_updater/include/: ota_scheduler.h  ota_updater.h
components/pump_control/: CMakeLists.txt  Kconfig  idf_component.yml  pump_control.c
components/pump_control/include/: pump_control.h
components/state/: CMakeLists.txt  state.c
components/state/include/: state.h
components/wifi_utils/: CMakeLists.txt  Kconfig  wifi_utils.c  wifi_utils_sntp.c  wifi_utils_softap.c  wifi_utils_sta.c
components/wifi_utils/include/: wifi_utils.h  wifi_utils_sntp.h  wifi_utils_softap.h  wifi_utils_sta.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  init_utils.c  init_utils.h  main.c  main_factory.c
profiles/: app  factory
scripts/: download_and_flash_release.sh  generate_wifi_qr_code.sh
tools/ota_server/: create_certificates.sh  ota_server.py
